--- a/css/custom.css
+++ b/css/custom.css
@@ -255,7 +255,7 @@ padding-top: 5px;
 	color:black;
 	margin: 0;
 }
-.con-card .mailb{
+.mailb{
 	/* max-width: 90%; */
 	/* overflow-wrap: normal; */
 	margin: 0;
