--- a/style.css
+++ b/style.css
@@ -430,7 +430,7 @@ a img.aligncenter {
 }
 
 .megamenu .megamenu-content {
-    /* padding: 10px; */
+    padding: 10px;
 }
 
 .megamenu .dropdown.megamenu-fw .dropdown-menu {
@@ -3398,13 +3398,14 @@ form button{
 
 
 .pd-add{
-	padding: 70px 0px;
+	padding: 50px 0px;
 }
 .address-item{
-	float: left;
-	margin: 0 11px;
-	padding: 0px 15px;
-	width: 31%;
+	/* float: left; */
+	margin: 10px;
+	padding: 5px 10px ;
+
+	/* width: 31%; */
 	box-shadow: 0 5px 14px rgba(0, 0, 0, 0.1);
 }
 
