--- a/style.css
+++ b/style.css
@@ -2927,14 +2927,14 @@ form button{
 	left: 0px;
 	top: 0px;
 	width: 100%;
-	padding: 20px;;
+	padding: 10px;
 	background: #ffffff;
 	z-index: 0;
-	transition: all 1s ease-in-out;
+	/* transition: all 1s ease-in-out; */
 	z-index: 999;
 	opacity: 1;
 	visibility: visible;
-	-ms-animation-name: fadeInDown;
+	/* -ms-animation-name: fadeInDown;
 	-moz-animation-name: fadeInDown;
 	-op-animation-name: fadeInDown;
 	-webkit-animation-name: fadeInDown;
@@ -2953,11 +2953,11 @@ form button{
 	-moz-animation-iteration-count: 1;
 	-op-animation-iteration-count: 1;
 	-webkit-animation-iteration-count: 1;
-	animation-iteration-count: 1;
+	animation-iteration-count: 1; */
 }
 
 .fixed-menu .navbar-default {
-    padding: 10px;
+    /* padding: 10px; */
     box-shadow: 0 0 8px 0 rgba(0,0,0,.12);
 }
 
