modified:   about-us.html 	modified:   blog/Adultery.html 	modified:   blog/Background_Verification.html 	modified:   blog/Competiter.html 	modified:   blog/Debugging.html 	modified:   blog/Asset.html 	modified:   blog/Divorce_Case.html 	modified:   blog/Employee.html 	modified:   blog/Extra.html 	modified:   blog/Financial.html 	modified:   blog/Froud.html 	modified:   blog/Legal.html 	modified:   blog/Loan.html 	modified:   blog/Loyalty_Test.html 	modified:   blog/Missing_Person.html 	modified:   blog/Photo_audio.html 	modified:   blog/Postmat.html 	modified:   blog/Sting.html 	modified:   blog/labor.html 	modified:   blog/premat.html 	modified:   contact.html 	modified:   contact.php 	modified:   contact1.php 	modified:   css/bootstrap.css 	modified:   css/bootstrap.min.css 	modified:   css/custom.css 	modified:   css/responsive.css 	deleted:    detective.zip 	modified:   faq.html 	deleted:    images/logos/logo.png 	modified:   index.html 	modified:   js/custom.js 	deleted:    portfolio.html 	deleted:    pricing.html 	modified:   style.css 	modified:   testimonials.html
	Disclaimer.html
	gallery.html
	images/image1.webp
	images/logos/Orignal_logo.png
	images/mobile.png
	images/ss1.webp
	images/ss2.webp
	images/ss3.webp
	images/ss4.webp
	images/ss5.webp
	images/ss6.webp
	images/ss7.webp
	images/ss8.webp
	uploads/Banner.jpeg
	uploads/Doc(1).jpeg
	uploads/Doc(2).jpeg
	uploads/Doc(3).jpeg
	uploads/Doc(4).jpeg
	uploads/Doc(5).jpeg
	uploads/Doc1.webp
	uploads/Doc2.webp
	uploads/Doc3.webp
	uploads/IT Dep.webp
	uploads/MISSING_PERSON.webp
	uploads/doc4.webp

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3633,14 +3633,14 @@ tbody.collapse.in {
   margin-bottom: 2px;
 }
 @media (min-width: 768px) {
-  .navbar-right .dropdown-menu {
-    right: 0;
-    left: auto;
+  /* .navbar-right .dropdown-menu {
+    right: 0; */
+    /* left: auto;
   }
   .navbar-right .dropdown-menu-left {
     right: auto;
     left: 0;
-  }
+  } */
 }
 .btn-group,
 .btn-group-vertical {
