--- a/css/responsive.css
+++ b/css/responsive.css
@@ -248,7 +248,7 @@
     }
     .navbar-collapse {
         border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 1);
     }
     .navbar-fixed-top {
         top: 0;
@@ -270,6 +270,7 @@
     }
     .collapse.in {
         display: block !important;
+        /* overflow: scroll; */
     }
     .dropbtn .dropdown-content {
         display: block;
